--- a/index.html
+++ b/index.html
@@ -8,54 +8,34 @@
 		/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-		<meta name="author" content="cubedhuang" />
+		<meta name="author" content="melodicht" />
 		<meta name="description" content="2D flocking simulation!" />
 		<meta
 			name="keywords"
-			content="cubedhuang, boids, flocking, 2d, simulation"
+			content="boids, flocking, 2d, simulation"
 		/>
 		<meta name="theme-color" content="#2f86c9" />
 
 		<meta property="og:title" content="Boids Simulation" />
 		<meta property="description" content="2D flocking simulation!" />
 		<meta property="og:description" content="2D flocking simulation!" />
+                <!--
 		<meta property="og:url" content="https://boids.dan.onl/" />
 		<meta property="og:image" content="https://cubedhuang.com/logo.png" />
+                -->
 
-		<link rel="shortcut icon" href="https://cubedhuang.com/favicon.ico" />
+                <!--
+		    <link rel="shortcut icon" href="https://cubedhuang.com/favicon.ico" />
+                    -->
 
 		<link rel="stylesheet" href="./style.css" />
-		<link rel="canonical" href="https://boids.dan.onl/" />
-		<link rel="author" href="https://dan.onl/" />
-		<link rel="publisher" href="https://dan.onl/" />
-
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script
-			async
-			src="https://www.googletagmanager.com/gtag/js?id=UA-107754281-2"
-		></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag("js", new Date());
-
-			gtag("config", "UA-107754281-2");
-		</script>
-		<!-- Cloudflare Web Analytics -->
-		<script
-			defer
-			src="https://static.cloudflareinsights.com/beacon.min.js"
-			data-cf-beacon='{"token": "52dcb98c1a10492682592c6cfe35319d"}'
-		></script>
-		<!-- End Cloudflare Web Analytics -->
 
 		<title>Boids Simulation</title>
 	</head>
 
 	<body>
-		<div id="container">
+	  <div id="container">
+            <!--
 			<header>
 				<h3>boids</h3>
 				<a
@@ -66,6 +46,7 @@
 					source code
 				</a>
 			</header>
+                        -->
 
 			<p class="info">
 				left and right click to move the boids, or just watch their
