--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
 		<script src="./js/opt.js"></script>
 		<script src="./js/boid.js"></script>
 		<script src="./js/flock.js"></script>
+                <script src="./js/obstacles.js"></script>
 		<script src="./js/main.js"></script>
 		<script src="./js/events.js"></script>
 	</body>
