Complete final project

--- a/index.html
+++ b/index.html
@@ -299,8 +299,11 @@
 		<script src="./lib/pixi.min.js"></script>
 
 		<script src="./js/v2d.js"></script>
+                <script src="./js/priorityQueue.js"></script>
 		<script src="./js/util.js"></script>
 		<script src="./js/opt.js"></script>
+                <script src="./js/grid.js"></script>
+                <script src="./js/goals.js"></script>
 		<script src="./js/boid.js"></script>
 		<script src="./js/flock.js"></script>
                 <script src="./js/obstacles.js"></script>
