--- a/index.html
+++ b/index.html
@@ -152,6 +152,15 @@
 				max="10"
 				step="0.25"
 				data-model="accuracyPower"
+			  />
+
+                        <p>goal force: <span data-show="goalForce"></span></p>
+			<input
+				type="range"
+				min="0"
+				max="100"
+				step="0.5"
+				data-model="goalForce"
 			/>
 
 			<p>boid vision: <span data-show="vision"></span></p>
