Update description to say double click creates goal

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				left and right click to move the boids, or just watch their
 				flocking patterns!
 				<br />
-				double click to make an explosion <br />
+				double click to drop a gravitational ball <br />
 				middle click or click in the top right to toggle this menu
 				<br />
 				press space to pause, and use . to advance one frame
