Credit the original author in the description

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                         -->
 
 			<p class="info">
+                                special thank you to Daniel Huang for the original project.
 				left and right click to move the boids, or just watch their
 				flocking patterns!
 				<br />
